[gd_scene load_steps=4 format=3 uid="uid://b3fsieu2raumu"]

[ext_resource type="Script" path="res://Scripts/Utility/WeedManager.gd" id="1_ht5d1"]
[ext_resource type="PackedScene" uid="uid://mvx45djeopmk" path="res://Prefabs/Farmland/Weed/WeedSpot.tscn" id="2_6pen1"]
[ext_resource type="PackedScene" uid="uid://f5yvsw7glp6r" path="res://Particles/Shovel/ShovelPullComplete.tscn" id="3_umuig"]

[node name="WeedManager" type="Node3D"]
script = ExtResource("1_ht5d1")
weed = ExtResource("2_6pen1")
grow_particles = ExtResource("3_umuig")

[node name="SpreadTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="SpreadIndicatorTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpreadTimer" to="." method="_on_spread_timer_timeout"]
[connection signal="timeout" from="SpreadIndicatorTimer" to="." method="_on_spread_indicator_timer_timeout"]
